<resources>
    <string name="app_name">ConnectME</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ? </string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="enter_correct_email">Enter Correct Email</string>
    <string name="enter_confirm_password">Enter confirm Password</string>
    <string name="passwords_not_matching">Passwords not matching</string>
    <string name="signup_failed">SignUp Failed %1$s</string>
    <string name="donthave_account">Dont have an account?</string>
    <string name="login_failed">Login Failed %1$s</string>
    <string name="user_updation_failed">Profile Updation Failed %1$s</string>
    <string name="online">online</string>
    <string name="did_not_choose_any_photo">Did not choose any photo</string>
    <string name="signup_success">SignUp Successful</string>
    <string name="permission_not_granted_file">Permission Not Granted to access a file</string>
    <string name="save">Save</string>
    <string name="logout">logout</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="profile_updated_succ">Profile Updated Successfully</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">profile</string>
    <string name="save_password">Save Password</string>
    <string name="change_password">Change Password</string>
    <string name="password_success_update">\"Password updated successfully \"</string>
    <string name="something_went_wrong">Something went wrong : %1$s</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_intructions">"Reset Password Instructions has been sent on : %1$s "</string>
    <string name="reset">reset</string>
    <string name="close">close</string>
    <string name="something_went_wrong_exep">Something Went Wrong : %1$s</string>
    <string name="failed_to_send_email">Failed to send email</string>
    <string name="reset_timer">Reset : %1$s</string>
    <string name="please_wait">Please Wait</string>
    <string name="connect">Connect</string>
    <string name="page_1">You are few steps away from connecting people</string>
    <string name="page_2">ConnectMe lets you connect with people with just few steps</string>
    <string name="page_3">Login/Signup with your credentials</string>
    <string name="page_4">Access your contacts and invite them to join</string>
    <string name="page_5">Select people you want to chat with</string>
    <string name="page_6">Enjoy connecting with people by pressing connect me button at the bottom !</string>
    <string name="image">Image</string>
    <string name="check_internet_connection">"Check internet connection "</string>
    <string name="retry">retry</string>
    <string name="no_internet">No internet</string>
    <string name="chat">Chat</string>
    <string name="request">Request</string>
    <string name="find">Find</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_chat_list">Empty chat list</string>
    <string name="chat_list_appear_here">Chat list appear here</string>
    <string name="empty_request_list">Friend requests will appear here</string>
    <string name="find_friends_here">Find friends here</string>
    <string name="send_friend_request">send request</string>
    <string name="cancel_friend_request">cancel request</string>
    <string name="failed_to_fetch_data">Failed to fetch data : %1$s</string>
    <string name="cancel_req_unsuccessful">could\'nt canel the request %1$s</string>
    <string name="accept">Accept</string>
    <string name="deny">deny</string>
    <string name="offline">offline</string>
    <string name="enter_message">Enter message</string>
    <string name="empty_string" />
    <string name="msg_send_error">Error : %1$s</string>
    <string name="message_sent_success">Message sent successfully</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="cancel_uploading_file">Cancel uploading file</string>
    <string name="are_you_sure_cancel_file_upload">Are you to cancel uploading the file</string>
    <string name="yes">YES</string>
    <string name="uploading_progress">Uploading %1$s (%2$s %%)</string>
    <string name="failed_to_upload">Failed to Upload : %1$s</string>
    <string name="forward">forward</string>
    <string name="delete">delete</string>
    <string name="share">share</string>
    <string name="download">download</string>
    <string name="message_deletion_error">Deletion error:%1$s</string>
    <string name="message_deleted_successfully">Message Deleted Successfully</string>
    <string name="error_deletion_cloud">Error in deletion of file in cloud %1$s</string>
    <string name="failed_to_download">Failed to download the file</string>
    <string name="cancel_downloading_file">Cancel Downloading File</string>
    <string name="are_you_sure_cancel_file_download">Are you to cancel the file download</string>
    <string name="downloading_progress">Downloading %1$s (  %2$s %%)</string>
    <string name="failed_to_download_file">Failed to download file : %1$s</string>
    <string name="file_downloaded_successfully">File downloaded successfully</string>
    <string name="view">View</string>
    <string name="intent_share_with">Share with ...</string>
    <string name="failed_to_save_token">Failed to save device token %1$s</string>
    <string name="failed_send_notification">Failed to send notification %14s</string>
    <string name="pass_length_error">password length should be greater than 6</string>
    <string name="pass_regex_error">password should contain minimum of one number,special character,one lowercase and one uppercase letter</string>
    <string name="empty_users_list">No users in the platform</string>
    <string name="please_wait_while_sending_email">"Please while sending email "</string>
    <string name="resend">resend</string>
</resources>