<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btLAttachment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="39dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/red_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llGallery"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <LinearLayout
        android:id="@+id/llVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/llGallery"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_videocam" />

        <TextView
            android:id="@+id/tvVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/video"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/llVideo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/llCamera"
        app:layout_constraintTop_toTopOf="@+id/llVideo">

        <ImageView
            android:id="@+id/ivGallery"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_gallery" />

        <TextView
            android:id="@+id/tvGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/gallery"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/llGallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/llGallery">

        <ImageView
            android:id="@+id/ivCamera"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal|center_vertical"
            app:srcCompat="@drawable/ic_camera" />

        <TextView
            android:id="@+id/tvCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/camera"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>